# paste_rs-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: api.rs  cli.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/paste/: mod.rs
