[package]
name = "paste_rs-cli"
readme = "README.md"
description = "A simple cli tool for https://paste.rs/"
license = "MIT"
homepage = "https://github.com/Canvas02/paste_rs-cli"
repository = "https://github.com/Canvas02/paste_rs-cli"
keywords = ["cli", "paste"]
categories = ["command-line-utilities"]
authors = ["Canvas02 <Canvas02@protonmail.com>"]
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
thiserror = "1.0"
# anyhow = "1.0"

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo" # Requires Cargo 1.59
